<resources>
   <string name="app_name">Health App</string>
   <string name="weightInput">Enter your weight in [KG]</string>
   <string name="heightInput">Enter your height in [CM]</string>
   <string name="ageInput">Enter your age</string>
   <string name="submit">Submit</string>
   <string name="bmi_panel">Calculate BMI</string>
   <string name="calorie_calculator_panel">Calorie Calculator</string>
   <string name="recipies_panel">Recipies</string>
   <string name="recipies_first">First Recipe</string>
   <string name="recipies_second">Second Recipe</string>
   <string name="man">Man</string>
   <string name="woman">Woman</string>
   <string name="back">Back</string>
   <string name="quiz">Quiz</string>d
   <string name="totalQuestions">Total Questions</string>
   <string name="exampleQuestion">ExampleQuestion</string>
   <string name="answerA">Ans A</string>
   <string name="answerB">Ans B</string>
   <string name="answerC">Ans C</string>
   <string name="answerD">Ans D</string>
   <string name="chart">Chart</string>
</resources>
