<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/result_background"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_question"
        android:text="@string/totalQuestions"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:textStyle="bold"
        android:text="@string/exampleQuestion"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_above="@id/choices_layout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_A"
            android:layout_margin="5dp"
            android:backgroundTint="@color/amount_background"
            android:text="@string/answerA"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_B"
            android:layout_margin="5dp"
            android:backgroundTint="@color/amount_background"
            android:text="@string/answerB"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_C"
            android:layout_margin="5dp"
            android:backgroundTint="@color/amount_background"
            android:text="@string/answerC"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_D"
            android:layout_margin="5dp"
            android:backgroundTint="@color/amount_background"
            android:text="@string/answerD"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="40dp"/>

</RelativeLayout>