<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_sports_gymnastics_24" />

    <TextView
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />

    <Button
        android:text= "@string/bmi_panel"
        android:id="@+id/bmi_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:text= "@string/calorie_calculator_panel"
        android:id="@+id/calories_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:text= "@string/recipies_panel"
        android:id="@+id/recipies_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</LinearLayout>